--- a/Engine/Config/BaseDeviceProfiles.ini
+++ b/Engine/Config/BaseDeviceProfiles.ini
@@ -89,6 +89,8 @@
 +DeviceProfileNameAndTypes=Android_Mali_G76_Vulkan,Android
 +DeviceProfileNameAndTypes=Android_Mali_G77,Android
 +DeviceProfileNameAndTypes=Android_Mali_G77_Vulkan,Android
++DeviceProfileNameAndTypes=Android_Mali_G78,Android
++DeviceProfileNameAndTypes=Android_Mali_G78_Vulkan,Android
 +DeviceProfileNameAndTypes=Android_Mali_G710,Android
 +DeviceProfileNameAndTypes=Android_Mali_G710_Vulkan,Android
 +DeviceProfileNameAndTypes=Android_Vulkan_SM5,Android
@@ -608,6 +610,8 @@ MatchProfile=(Profile="Android_Adreno4xx",Match=((SourceType=SRC_GpuFamily,Compa
 +MatchProfile=(Profile="Android_Mali_G76",Match=((SourceType=SRC_GpuFamily,CompareType=CMP_Regex,MatchString="^Mali\\-G76")))
 +MatchProfile=(Profile="Android_Mali_G77_Vulkan",Match=((SourceType=SRC_GpuFamily,CompareType=CMP_Regex,MatchString="^Mali\\-G77"),(SourceType=SRC_VulkanAvailable,CompareType=CMP_Equal,MatchString="true")))
 +MatchProfile=(Profile="Android_Mali_G77",Match=((SourceType=SRC_GpuFamily,CompareType=CMP_Regex,MatchString="^Mali\\-G77")))
++MatchProfile=(Profile="Android_Mali_G78_Vulkan",Match=((SourceType=SRC_GpuFamily,CompareType=CMP_Regex,MatchString="^Mali\\-G78"),(SourceType=SRC_VulkanAvailable,CompareType=CMP_Equal,MatchString="true")))
++MatchProfile=(Profile="Android_Mali_G78",Match=((SourceType=SRC_GpuFamily,CompareType=CMP_Regex,MatchString="^Mali\\-G78")))
 +MatchProfile=(Profile="Android_Mali_G710_Vulkan",Match=((SourceType=SRC_GpuFamily,CompareType=CMP_Regex,MatchString="^Mali\\-G710"),(SourceType=SRC_VulkanAvailable,CompareType=CMP_Equal,MatchString="true")))
 +MatchProfile=(Profile="Android_Mali_G710",Match=((SourceType=SRC_GpuFamily,CompareType=CMP_Regex,MatchString="^Mali\\-G710")))
 ; Enable Vulkan on any unknown Mali running Android 10 or later
@@ -829,6 +833,16 @@ BaseProfileName=Android_High
 [Android_Mali_G77_Vulkan DeviceProfile]
 DeviceType=Android
 BaseProfileName=Android_Mali_G77
+; enable Vulkan
++CVars=r.Android.DisableVulkanSupport=0
+
+[Android_Mali_G78 DeviceProfile]
+DeviceType=Android
+BaseProfileName=Android_High
+
+[Android_Mali_G78_Vulkan DeviceProfile]
+DeviceType=Android
+BaseProfileName=Android_Mali_G78
 ; enable Vulkan
 +CVars=r.Android.DisableVulkanSupport=0
 
