--- a/Engine/Plugins/VirtualProduction/LiveLinkCamera/LiveLinkCamera.uplugin
+++ b/Engine/Plugins/VirtualProduction/LiveLinkCamera/LiveLinkCamera.uplugin
@@ -34,6 +34,11 @@
 			"Name": "LiveLinkCameraEditor",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "LiveLinkCameraRecording",
+			"Type": "UncookedOnly",
+			"LoadingPhase": "Default"
 		}
 	]
 }
