--- a/Engine/Config/Mac/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Mac/DataDrivenPlatformInfo.ini
@@ -94,3 +94,6 @@ bUsesHostCompiler=true
 bUATClosesAfterLaunch=true
 UBTTargetID=Mac
 PlatformGroupName=Desktop
+
+[ShaderPlatform METAL_SM5]
+bSupportsAnisotropicMaterials=true
